[package]
name = "test-solana-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.9.1"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "=1.9.1"
solana-sdk = "=1.9.1"
solana-validator = "=1.9.1"

[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]